[Fix] Fixed video height on mobile devices.

--- a/css/view.css
+++ b/css/view.css
@@ -11,16 +11,10 @@
 
 .path-mod-citizencam #mod-ctz-video-wrapper {
     width: 100%;
-    max-width: 900px;
+    max-width: 910px;
+    min-height: 512px;
     display: inline-block;
     position: relative;
-}
-
-.path-mod-citizencam #mod-ctz-video-wrapper:after {
-    /* 16:9 ratio */
-    padding-top: calc(100% * 9 / 16);
-    display: block;
-    content: '';
 }
 
 .path-mod-citizencam #mod-ctz-video {
